# cmake_xcode_object_lib

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  main.c
cmake/modules/: resolve_duplicate_filenames.cmake  resolve_duplicate_filenames_alias.cmake.in
lib/: CMakeLists.txt  x.c  x.h
lib/alt1/: x.c  x.h
lib/alt2/: x.c  x.h
