option(ALT1 "ALT1" ON) 
option(ALT2 "ALT2" ON) 
set(SOURCES x.c)

set(alt_defs "")
if ( ALT1 ) 
  list(APPEND alt_defs ALT1)
  list(APPEND SOURCES alt1/x.c) 
elseif ( ALT2 )
  list(APPEND alt_defs ALT2)
  list(APPEND SOURCES alt2/x.c) 
endif() 
add_library(example OBJECT ${SOURCES})
foreach(def ${alt_defs})
  target_compile_definitions(example PUBLIC ${def})
endforeach()