option(ALT1 "ALT1" ON) 
option(ALT2 "ALT2" ON) 
set(SOURCES x.c)

set(alt_defs "")
if ( ALT1 ) 
  list(APPEND alt_defs ALT1)
  list(APPEND SOURCES alt1/x.c) 
elseif ( ALT2 )
  list(APPEND alt_defs ALT2)
  list(APPEND SOURCES alt2/x.c) 
endif()

option(RESOLVE_COLLISIONS "Resolve filename collisions with alias" OFF)
if(RESOLVE_COLLISIONS)
  include(resolve_duplicate_filenames)
  resolve_duplicate_filenames(SOURCES)
endif()

add_library(example OBJECT ${SOURCES})
foreach(def ${alt_defs})
  target_compile_definitions(example PUBLIC ${def})
endforeach()
